test/files/neg/virtpatmat_unreach_select.check
virtpatmat_unreach_select.scala:10: error: unreachable code
    case WARNING.id => // unreachable
                    ^
one error found
